--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.0.144:3306/db_even_first_1
+    url: jdbc:mariadb://localhost:3306/movieflow
     # 192.168.0.144:3306 빌드 시 꼭 수정
-    username: even_first_1
-    password: epson
+    username: root
+    password: green502
 
 mybatis:
   mapper-locations: mappers/**/*.xml
