--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.0.144:3306/db_even_first_1
-    # 192.168.0.144:3306/db_even_first_1 빌드 시 꼭 수정 localhost:3306/movieflow
-    username: even_first_1  # root
-    password: epson         # green502
+    #url: jdbc:mariadb://192.168.0.144:3306/db_even_first_1
+    #username: even_first_1
+    #password: epson
+
+    # 192.168.0.144:3306/even_first_1 빌드 시 꼭 수정 localhost:3306/movieflow
+    url: jdbc:mariadb://localhost:3306/movieflow
+    username: root
+    password: green502
 
 mybatis:
   mapper-locations: mappers/**/*.xml
