--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.0.144:3306/db_even_first_1
-    username: even_first_1
-    password: epson
+    #url: jdbc:mariadb://192.168.0.144:3306/db_even_first_1
+    #username: even_first_1
+    #password: epson
 
-    #url: jdbc:mariadb://localhost:3306/movieflow
-    #username: root
-    #password: green502
+    url: jdbc:mariadb://localhost:3306/movieflow
+    username: root
+    password: green502
 
 mybatis:
   mapper-locations: mappers/**/*.xml
